dosbox (0.74-2) UNRELEASED; urgency=low

  * Fix "FTBFS: ../../include/dos_inc.h:543:78: error: expected primary-
    expression before ',' token" add patch from upstream SVN as
    debian/patches/ftbfs624976_upstream_svn3691.patch (Closes: #624976)

 -- Jan Dittberner <jandd@debian.org>  Mon, 02 May 2011 20:47:26 +0200

dosbox (0.74-1) unstable; urgency=low

  * New upstream release.
  * remove debian/README.source because repacking is not required
  * remove version mangling from debian/watch
  * update debian/README.Debian, remove outdated note regarding removed
    files
  * remove Debian patches that have been applied upstream
   - debian/patches/fix_spelling_errors.patch
   - debian/patches/remove_fmopl_code.patch
   - debian/patches/remove_ymf262_code.patch
  * refresh debian/patches/fix_manpage_errors.patch
  * debian/control: update Standards-Version to 3.8.4, no changes needed

 -- Jan Dittberner <jandd@debian.org>  Fri, 14 May 2010 09:57:20 +0200

dosbox (0.73+dfsg1-1) unstable; urgency=low

  * remove src/hardware/ymf262.c, src/hardware/ymf262.h, add
    debian/patches/remove_ymf262_code.patch to remove dependencies on
    ymf262.{c,h}, update debian/patches/series and debian/README.source
    (Closes: #559443)
  * debian/copyright: refer to GPL-2 explicitly
  * debian/watch: add opts=dversionmangle to calculate correct upstream
    version
  * incorporate upstream suggestions:
    - remove debian/patches/bios_keyboard.cpp.patch, upstream uses
      putenv("SDL_DISABLE_LOCK_KEYS=1") in src/gui/sdlmain.cpp, update
      debian/patches/series
    - remove debian/dosbox.conf.example because dosbox creates a
      configuration file automatically if it does not exist, update
      debian/docs and debian/README.Debian

 -- Jan Dittberner <jandd@debian.org>  Sat, 05 Dec 2009 19:37:29 +0100

dosbox (0.73-2) unstable; urgency=low

  * debian/control:
    - remove quilt from Build-Depends because source format 3.0 (quilt)
      implies that already