@@ -12,3 +12,12 @@ Last-Update: 2009-11-30
  .TP
  .B \-printconf
  prints the location of the default configuration file.
+@@ -218,7 +218,7 @@
+ the emulated soundcards and many
+ .RI "more things. It futher allows acces to " AUTOEXEC.BAT .
+ .LP
+-The language file controls all visible ouput of the internal commands and
++The language file controls all visible output of the internal commands and
+ the internal dos. 
+ .RB "See the section " FILES " for more information."
+ .TP 
